# DifficultAgriculture

./: .gitignore  main.py  pyproject.toml
configs/: minneapple_yolo.yaml
configs/experiments/: global_wheat_head_yolo.yaml  minneapple_yolo.yaml
dagri/: interfaces.py
dagri/augmentation/: __init__.py  augumentor.py  domain_cluster.py  object_miner.py  rebase.txt  synthesizer.py
dagri/baseline/: __init__.py  model.py  trainer.py  utils.py  yolo_model.py
dagri/data/: __init__.py  dataset.py  minneapple.py  (+2 more)
experiments/: 01_dataset_manual_analysis.py  01_minneapple_yolo_augmentation.py  01_minneapple_yolo_tradition_aug.py  01_only_training.py  02_minneapple_yolo_scoring_exp.py  02_only_scoring.py  03_minneapple_yolo_copy_paste.py  04_train_and_scoring_mulseed.py  04_val_set_minneapple_yolo_scoring.py  055_multiseed_copy_paste_exp.py  05_copy_paste_exp.py  06_minneapple_yolo_full_1_seed.py  07_minneapple_yolo_full_3_seed.py  09_aug_exp_only.py  10_new_dataset_training.py  11_loop_to_find_param.py  utils.py
notebooks/: check_optimal_confidence_threshold.ipynb  copy_paste_aug_analysis.ipynb  dataset_analysis.ipynb  dataset_object_size_distribution_analysis.ipynb  dataset_yolov8_analysis.ipynb  global_wheat_head_dataset_analysis.ipynb  global_wheat_head_manual_analysis.ipynb  global_wheat_head_scoring_analysis.ipynb  new_dataset_visualization.ipynb  overall_scoring_analysis.ipynb  overall_seed_correlation.ipynb  random_copy_paste_aug_analysis.ipynb  score_correlation.ipynb  scoring_analysis.ipynb  scoring_analysis_minne_apple.ipynb  size_distribution_score.ipynb
(+11 files in other folders)
