[project]
name = "difficultyagri"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "torch>=2.9.1",
  "torchvision>=0.24.1",
  "seaborn>=0.13.2",
  "matplotlib>=3.9.0",
  "scikit-learn>=1.5.2",
  "pycocotools>=2.0.11",
  "ultralytics>=8.3.243",
]
